--- a/src/main/Main_Page.fxml
+++ b/src/main/Main_Page.fxml
@@ -8,17 +8,16 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.shape.Circle?>
 
-<AnchorPane prefHeight="576.0" prefWidth="1024.0" stylesheets="@../res/Decorate.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.Main_PageController">
+<AnchorPane prefHeight="576.0" prefWidth="1024.0" stylesheets="@../res/Decorate.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.Main_PageController">
    <children>
       <AnchorPane id="menubar" fx:id="bar" layoutY="25.0" prefHeight="576.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="824.0" AnchorPane.topAnchor="25.0">
          <children>
             <Button id="b1" fx:id="b1" layoutX="26.0" layoutY="37.0" mnemonicParsing="false" onAction="#click" prefHeight="40.0" prefWidth="148.0" text="Hide Butang 2&amp;3" />
             <Button id="b2" fx:id="b2" layoutX="25.0" layoutY="97.0" mnemonicParsing="false" onAction="#click" prefHeight="40.0" prefWidth="148.0" text="Preset 2" />
             <Button id="b3" fx:id="b3" layoutX="25.0" layoutY="159.0" mnemonicParsing="false" onAction="#click" prefHeight="40.0" prefWidth="148.0" text="Preset 3" />
-            <Button id="b4" fx:id="b4" layoutX="25.0" layoutY="217.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="148.0" text="Light Animation(kosong)" />
+            <Button id="b4" fx:id="b4" layoutX="25.0" layoutY="217.0" mnemonicParsing="false" onAction="#animation" prefHeight="40.0" prefWidth="148.0" text="Light Animation(kosong)" />
             <Button id="b5" fx:id="b5" layoutX="25.0" layoutY="275.0" mnemonicParsing="false" onAction="#click" prefHeight="40.0" prefWidth="148.0" text="Tukar Pokok" />
             <Button id="b6" fx:id="b6" layoutX="26.0" layoutY="333.0" mnemonicParsing="false" onAction="#click" prefHeight="40.0" prefWidth="148.0" text="Tukar Background" />
          </children>
@@ -32,12 +31,7 @@
             <ImageView fx:id="or1" fitHeight="30.0" fitWidth="30.0" layoutX="383.0" layoutY="236.0" pickOnBounds="true" scaleZ="0.0" />
             <Label fx:id="lb1" layoutX="7.0" layoutY="6.0" />
             <Label fx:id="lb2" layoutX="7.0" layoutY="26.0" />
-            <StackPane fx:id="PaneLampu" layoutX="57.0" layoutY="23.0" prefHeight="40.0" prefWidth="51.0">
-               <children>
-                  <Circle fx:id="circleBesar" fill="DODGERBLUE" radius="28.0" stroke="BLACK" strokeType="INSIDE" style="-fx-fill: PINK;" />
-                  <Circle fx:id="circleKecik" fill="DODGERBLUE" radius="19.0" stroke="BLACK" strokeType="INSIDE" style="-fx-fill: RED;" />
-               </children>
-            </StackPane>
+            <Circle fx:id="circle" fill="DODGERBLUE" layoutX="84.0" layoutY="62.0" radius="19.0" stroke="BLACK" strokeType="INSIDE" style="-fx-fill: RED;" />
             <ImageView fx:id="olaf" fitHeight="232.0" fitWidth="148.0" layoutX="676.0" layoutY="319.0" pickOnBounds="true" preserveRatio="true" />
          </children></AnchorPane>
       <MenuBar layoutY="2.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
