--- a/src/main/Main_Page.fxml
+++ b/src/main/Main_Page.fxml
@@ -51,14 +51,14 @@
                <image>
                   <Image url="@../res/img/olaf.jpg" />
                </image></ImageView>
-            <Circle fx:id="circle1" fill="DODGERBLUE" layoutX="72.0" layoutY="72.0" radius="19.0" stroke="BLACK" strokeType="INSIDE" style="-fx-fill: RED;" />
-            <Circle fx:id="circle2" fill="DODGERBLUE" layoutX="144.0" layoutY="144.0" radius="19.0" stroke="BLACK" strokeType="INSIDE" style="-fx-fill: RED;" />
-            <Circle fx:id="circle3" fill="DODGERBLUE" layoutX="216.0" layoutY="72.0" radius="19.0" stroke="BLACK" strokeType="INSIDE" style="-fx-fill: RED;" />
-            <Circle fx:id="circle4" fill="DODGERBLUE" layoutX="288.0" layoutY="144.0" radius="19.0" stroke="BLACK" strokeType="INSIDE" style="-fx-fill: RED;" />
-            <Circle fx:id="circle5" fill="DODGERBLUE" layoutX="536.0" layoutY="144.0" radius="19.0" stroke="BLACK" strokeType="INSIDE" style="-fx-fill: RED;" />
-            <Circle fx:id="circle6" fill="DODGERBLUE" layoutX="608.0" layoutY="72.0" radius="19.0" stroke="BLACK" strokeType="INSIDE" style="-fx-fill: RED;" />
-            <Circle fx:id="circle7" fill="DODGERBLUE" layoutX="680.0" layoutY="144.0" radius="19.0" stroke="BLACK" strokeType="INSIDE" style="-fx-fill: RED;" />
-            <Circle fx:id="circle8" fill="DODGERBLUE" layoutX="752.0" layoutY="72.0" radius="19.0" stroke="BLACK" strokeType="INSIDE" style="-fx-fill: RED;" />
+            <Circle fx:id="circle1" layoutX="72.0" layoutY="72.0" radius="19.0" stroke="BLACK" strokeType="INSIDE" />
+            <Circle fx:id="circle2" layoutX="144.0" layoutY="144.0" radius="19.0" stroke="BLACK" strokeType="INSIDE" />
+            <Circle fx:id="circle3" layoutX="216.0" layoutY="72.0" radius="19.0" stroke="BLACK" strokeType="INSIDE" />
+            <Circle fx:id="circle4" layoutX="288.0" layoutY="144.0" radius="19.0" stroke="BLACK" strokeType="INSIDE" />
+            <Circle fx:id="circle5" layoutX="536.0" layoutY="144.0" radius="19.0" stroke="BLACK" strokeType="INSIDE" />
+            <Circle fx:id="circle6" layoutX="608.0" layoutY="72.0" radius="19.0" stroke="BLACK" strokeType="INSIDE" />
+            <Circle fx:id="circle7" layoutX="680.0" layoutY="144.0" radius="19.0" stroke="BLACK" strokeType="INSIDE" />
+            <Circle fx:id="circle8" layoutX="752.0" layoutY="72.0" radius="19.0" stroke="BLACK" strokeType="INSIDE" />
          </children></AnchorPane>
    </children>
 </AnchorPane>
