--- a/src/main/Selection_Page.fxml
+++ b/src/main/Selection_Page.fxml
@@ -21,7 +21,7 @@
             <RadioButton id="rtr1" fx:id="rtr1" layoutX="18.0" layoutY="152.0" mnemonicParsing="false" onAction="#changeTr" text="Tree 1" />
             <RadioButton id="rtr2" fx:id="rtr2" layoutX="18.0" layoutY="176.0" mnemonicParsing="false" onAction="#changeTr" text="Tree 2" />
             <Label layoutX="18.0" layoutY="210.0" prefHeight="17.0" prefWidth="120.0" text="Make it snow!" />
-            <CheckBox layoutX="21.0" layoutY="237.0" mnemonicParsing="false" text="YESH PLEASE" />
+            <CheckBox fx:id="snow" layoutX="21.0" layoutY="237.0" mnemonicParsing="false" onAction="#wantSnow" text="YESH PLEASE" />
          </children></AnchorPane>
     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
          <children>
@@ -33,7 +33,7 @@
                      </image>
                   </ImageView>
                </children></AnchorPane>
-            <Button id="bOK" layoutX="378.0" layoutY="372.0" mnemonicParsing="false" text="OK" />
+            <Button id="bOK" layoutX="378.0" layoutY="372.0" mnemonicParsing="false" onAction="#onClick" text="OK" />
          </children></AnchorPane>
   </items>
 </SplitPane>
