--- a/src/main/Main_Page.fxml
+++ b/src/main/Main_Page.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Circle?>
 
-<AnchorPane prefHeight="576.0" prefWidth="1024.0" stylesheets="@../res/Decorate.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.Main_PageController">
+<AnchorPane prefHeight="576.0" prefWidth="1024.0" stylesheets="@../res/Decorate.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.Main_PageController">
    <children>
       <MenuBar layoutY="2.0" prefHeight="25.0" prefWidth="1024.0" style="-fx-background-color: #f3f9fb;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <menus>
@@ -55,14 +55,14 @@
                <image>
                   <Image url="@../res/img/olaf.jpg" />
                </image></ImageView>
-            <Circle fx:id="circle1" layoutX="72.0" layoutY="72.0" radius="5.0" stroke="BLACK" strokeType="INSIDE" />
-            <Circle fx:id="circle2" layoutX="144.0" layoutY="144.0" radius="5.0" stroke="BLACK" strokeType="INSIDE" />
-            <Circle fx:id="circle3" layoutX="216.0" layoutY="72.0" radius="5.0" stroke="BLACK" strokeType="INSIDE" />
-            <Circle fx:id="circle4" layoutX="288.0" layoutY="144.0" radius="5.0" stroke="BLACK" strokeType="INSIDE" />
-            <Circle fx:id="circle5" layoutX="536.0" layoutY="144.0" radius="5.0" stroke="BLACK" strokeType="INSIDE" />
-            <Circle fx:id="circle6" layoutX="608.0" layoutY="72.0" radius="5.0" stroke="BLACK" strokeType="INSIDE" />
-            <Circle fx:id="circle7" layoutX="680.0" layoutY="144.0" radius="5.0" stroke="BLACK" strokeType="INSIDE" />
-            <Circle fx:id="circle8" layoutX="749.0" layoutY="69.0" radius="5.0" stroke="BLACK" strokeType="INSIDE" />
+            <Circle fx:id="circle1" fill="#082813" layoutX="361.0" layoutY="319.0" radius="5.0" stroke="#082813" strokeType="INSIDE" />
+            <Circle fx:id="circle2" fill="#082813" layoutX="371.0" layoutY="261.0" radius="5.0" stroke="#082813" strokeType="INSIDE" />
+            <Circle fx:id="circle3" fill="#082813" layoutX="459.0" layoutY="261.0" radius="5.0" stroke="#082813" strokeType="INSIDE" />
+            <Circle fx:id="circle4" fill="#082813" layoutX="381.0" layoutY="212.0" radius="5.0" stroke="#082813" strokeType="INSIDE" />
+            <Circle fx:id="circle5" fill="#082813" layoutX="454.0" layoutY="212.0" radius="5.0" stroke="#082813" strokeType="INSIDE" />
+            <Circle fx:id="circle6" fill="#082813" layoutX="351.0" layoutY="382.0" radius="5.0" stroke="#082813" strokeType="INSIDE" />
+            <Circle fx:id="circle7" fill="#082813" layoutX="464.0" layoutY="319.0" radius="5.0" stroke="#082813" strokeType="INSIDE" />
+            <Circle fx:id="circle8" fill="#082813" layoutX="474.0" layoutY="382.0" radius="5.0" stroke="#082813" strokeType="INSIDE" />
          </children></AnchorPane>
    </children>
 </AnchorPane>
