--- a/src/main/Main_Page.fxml
+++ b/src/main/Main_Page.fxml
@@ -55,14 +55,14 @@
                <image>
                   <Image url="@../res/img/olaf.jpg" />
                </image></ImageView>
-            <Circle fx:id="circle1" fill="#082813" layoutX="361.0" layoutY="319.0" radius="5.0" stroke="#082813" strokeType="INSIDE" />
-            <Circle fx:id="circle2" fill="#082813" layoutX="371.0" layoutY="261.0" radius="5.0" stroke="#082813" strokeType="INSIDE" />
-            <Circle fx:id="circle3" fill="#082813" layoutX="459.0" layoutY="261.0" radius="5.0" stroke="#082813" strokeType="INSIDE" />
-            <Circle fx:id="circle4" fill="#082813" layoutX="381.0" layoutY="212.0" radius="5.0" stroke="#082813" strokeType="INSIDE" />
-            <Circle fx:id="circle5" fill="#082813" layoutX="454.0" layoutY="212.0" radius="5.0" stroke="#082813" strokeType="INSIDE" />
-            <Circle fx:id="circle6" fill="#082813" layoutX="351.0" layoutY="382.0" radius="5.0" stroke="#082813" strokeType="INSIDE" />
-            <Circle fx:id="circle7" fill="#082813" layoutX="464.0" layoutY="319.0" radius="5.0" stroke="#082813" strokeType="INSIDE" />
-            <Circle fx:id="circle8" fill="#082813" layoutX="474.0" layoutY="382.0" radius="5.0" stroke="#082813" strokeType="INSIDE" />
+            <Circle fx:id="circle1" fill="#fafafa00" layoutX="361.0" layoutY="319.0" radius="5.0" stroke="#ffffff00" strokeType="INSIDE" />
+            <Circle fx:id="circle2" fill="#ffffff00" layoutX="371.0" layoutY="261.0" radius="5.0" stroke="#ffffff00" strokeType="INSIDE" />
+            <Circle fx:id="circle3" fill="#ffffff00" layoutX="459.0" layoutY="261.0" radius="5.0" stroke="#ffffff00" strokeType="INSIDE" />
+            <Circle fx:id="circle4" fill="#ffffff00" layoutX="381.0" layoutY="212.0" radius="5.0" stroke="#ffffff00" strokeType="INSIDE" />
+            <Circle fx:id="circle5" fill="#ffffff00" layoutX="454.0" layoutY="212.0" radius="5.0" stroke="#ffffff00" strokeType="INSIDE" />
+            <Circle fx:id="circle6" fill="#ffffff00" layoutX="351.0" layoutY="382.0" radius="5.0" stroke="#ffffff00" strokeType="INSIDE" />
+            <Circle fx:id="circle7" fill="#ffffff00" layoutX="464.0" layoutY="319.0" radius="5.0" stroke="#ffffff00" strokeType="INSIDE" />
+            <Circle fx:id="circle8" fill="#ffffff00" layoutX="474.0" layoutY="382.0" radius="5.0" stroke="#ffffff00" strokeType="INSIDE" />
          </children></AnchorPane>
    </children>
 </AnchorPane>
